--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<head>
+    <title>The band</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="514-5143609_drum-instrument-music-play-icon-rock-band-drum.png">
+    <script src="https://kit.fontawesome.com/d963eb2494.js" crossorigin="anonymous"></script>
+</head>
+<body>
+    <div class="header">
+        <div class="header-button">HOME</div>
+        <div class="header-button">BAND</div>
+        <div class="header-button">TOUR</div>
+        <div class="header-button">CONTACT</div>
+        <div class="header-button">MORE <i class="fa-sharp fa-solid fa-sort-down"></i></div>
+    </div>
+</body>
