Home page complete

--- a/index.html
+++ b/index.html
@@ -1,16 +1,42 @@
 <!DOCTYPE html>
-<head>
-    <title>The band</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="514-5143609_drum-instrument-music-play-icon-rock-band-drum.png">
-    <script src="https://kit.fontawesome.com/d963eb2494.js" crossorigin="anonymous"></script>
-</head>
-<body>
-    <div class="header">
-        <div class="header-button">HOME</div>
-        <div class="header-button">BAND</div>
-        <div class="header-button">TOUR</div>
-        <div class="header-button">CONTACT</div>
-        <div class="header-button">MORE <i class="fa-sharp fa-solid fa-sort-down"></i></div>
-    </div>
-</body>
+<html>
+    <head>
+        <title>School Buddy</title>
+        <link rel="stylesheet" href="assets\styles.css">
+        <script src="https://kit.fontawesome.com/d963eb2494.js" crossorigin="anonymous"></script>
+        <link rel="icon" href="assets\img\images.png">
+    </head>
+    <body>
+        <div class="main">
+            <ul class="header">
+                <div class="nav">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Team profile</a></li>
+                    <li><a href="">Tools</a></li>
+                    <li class="drop-down">
+                        <a href="">
+                            Project description
+                            <i class="fa-solid fa-caret-down"></i>
+                        </a>
+                        <ul class="subnav">
+                            <li><a href="">Overview</a></li>
+                            <li><a href="">Detailed description</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="">Skills and Jobs</a></li>
+                    <li><a href="">Project Outcomes</a></li>
+                    <li><a href="">Reflection</a></li>
+                </div>
+                <div class="search-button">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+            </ul>
+        </div>
+        <div class="team-photo">
+            <div class="description">
+                <div class="team-name">School Buddy</div>
+                <div class="team-number">Group 11</div>
+            </div>
+        </div>
+    </body>
+</html>
