created the style for individual pages

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                             <li><a href="">Detailed description</a></li>
                         </ul>
                     </li>
-                    <li><a href="">Skills and Jobs</a></li>
+                    <li><a href="skill and job.html">Skills and Jobs</a></li>
                     <li><a href="">Project Outcomes</a></li>
                     <li><a href="">Reflection</a></li>
                 </div>
