Table style commit

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
     <head>
         <title>School Buddy</title>
+        <meta charset="utf-8">
         <link rel="stylesheet" href="assets\styles.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://kit.fontawesome.com/d963eb2494.js" crossorigin="anonymous"></script>
         <link rel="icon" href="assets\img\images.png">
     </head>
@@ -10,8 +12,8 @@
         <div class="main">
             <ul class="header">
                 <div class="nav">
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Team profile</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="team profile.html">Team profile</a></li>
                     <li><a href="">Tools</a></li>
                     <li class="drop-down">
                         <a href="">
