Update the link  for project description and creation of project description

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <li><a href="">Team profile</a></li>
                     <li><a href="">Tools</a></li>
                     <li class="drop-down">
-                        <a href="">
+                        <a href="project_description.html">
                             Project description
                             <i class="fa-solid fa-caret-down"></i>
                         </a>
