Table color commit

--- a/team profile.html
+++ b/team profile.html
@@ -19,12 +19,14 @@
   <div class="personal-information">
     <h2>1. Personal information</h2>
     <table>
-        <tr>
-            <th>Nhat Minh</th>
-            <th>Trong</th>
-            <th>Chau</th>
-            <th>Hoang Minh</th>
-        </t>
+        <thead>
+            <tr>
+                <th>Nhat Minh</th>
+                <th>Trong</th>
+                <th>Chau</th>
+                <th>Hoang Minh</th>
+            </tr>
+        </thead>
         <tr>
             <td>
                 <div class="information">
