Update content of skills and jobs

--- a/skill and job.html
+++ b/skill and job.html
@@ -9,14 +9,103 @@
 <body>
 
 <div class="sidenav">
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
+  <a href="#"> Home </a>
+  <a href="#"> Previous </a>
+  <a href="#"> Next </a>
 </div>
 
 <div class="content">
   <h1>Skills and Jobs</h1>
-  <p>A full-height, fixed sidenav and content.</p>
+  <h3> 1.Overview</h3>
+  <p>   Fundamentally, School buddy is a highly friendly and modern school management system which has been working on as a project for 10 weeks. All the functionalities and inspirations have been fabricated all by the first-year students of the RMIT students. This project was observed to be promising by many instructors and contributors. During this time, we would like to request assistance from supporters with medium/high experience in the specific fields. The participants who can understand and adapt with a certain number of tasks and requirements to help this project achieve the max potential in the upcoming years.</p>
+  
+  <h3> 2.Job Description</h3>
+  <h4> Front - end Developer:</h4>
+  <p> Duties and responsibilities:</p>
+  
+  <ul>
+    <li> Collaborating with backend developers to create Friendly-Interface and helpful applications/website. </li>
+    <li> Creating website with codes like CSS, JavaScript (dynamite using different libraries).</li>
+    <li> Always take responsible for any complain, change or mistake arise.</li>
+    <li> Turning the website accessible to many platforms (IOS, Android, Window, etc.)
+    <li> Incorporating animations, graphic like videos and illustrations into the website.</li>
+    <li> Deliver fast.</li> 
+  </ul>
+  
+  <p> Requirements:</p>
+  <ul>
+    <li> Fluency with both verbal and written English.</li>
+    <li> Bachelor’s/Master’s degree in computer science, IoT (or similar experience)</li>
+    <li> At least 3-5 years of experience collaborating with User Interface</li>
+    <li> Medium/effective communication skills (collaborating with Backend developers)</li>
+    <li> Experienced with JavaScript, CSS (and React)</li>
+    <li> Good at adapting and understanding customer’s need</li>
+    <li> Stay professionally overseeing problems despite in stressful situations</li>
+    <li> Competitive attitude is a high plus</li>
+    <li> Able to work through Git</li>
+  </ul>
+
+
+  <h4> Back - end Developer:</h4>
+  <p> Duties and responsibilities:</p>
+  <ul>
+    <li> Provide and maintain reliable API which function smoothly with Frontend</li>
+    <li> Optimize server for the best experience and stability</li>
+    <li> Ensure that the website can operate all the functions</li>
+    <li> Always analyze and enhance the system if it is possible</li>
+    <li> Capable of investigating and debugging if there is any error occurs</li>
+  </ul>
+
+  <p> Requirements:</p>
+  <ul>
+    <li> Fluency with both verbal and written English</li>
+    <li> 3+ years of experience working with backend development</li>
+    <li> Experience in AWS, NodeJS, SQL, Python</li>
+    <li> Effective in teamwork and communication </li>
+    <li> High adaptability if there are any changes in project</li>
+    <li> Friendly and ready to teach, rise any participants working in the project</li>
+  </ul>
+
+
+  <h4> Technical Lead:</h4>
+  <p> Duties and responsibilities:</p>
+  <ul>
+    <li> Setting schedules and tasks for the team</li>
+    <li> Record the progress and deliver clearly to the member about the status</li>
+    <li> Identify risks and prepare a plan to minimize the consequences</li>
+    <li> Keep updating the technical trends and developments</li>
+    <li> Checking goals weekly and monthly</li>
+  </ul>
+
+  <p> Requirements:</p>
+  <ul>
+    <li> Bachelor’s degree in computer science and engineering, IoT.</li>
+    <li> Management certification and experience is highly recommended</li>
+    <li> Capability of leading and controlling the group in dispute situations</li>
+    <li> Motivation in work and able to inspire other</li>
+    <li> Always stay professional and discipline in work</li>
+  </ul>
+
+
+  <h4> Cybersecurity:</h4>
+  <p> Duties and responsibilities:</p>
+  <ul>
+    <li> Be able to identify suspicious activities and quickly solve security breaches</li>
+    <li> Prevent data thief by using different methods like firewall, data-encryption, etc.</li>
+    <li> Proactive in updating and improving security programs</li>
+    <li> Carry out regular ethical hacking</li>
+    <li> Ready to instruct other employees to avoid fraud, phishing, etc.</li>
+  </ul>
+
+  <p> Requirements:</p>
+  <ul>
+    <li> Bachelor’s degree in IT or equivalent bachelor</li>
+    <li> Deep understanding about security about firewall, proxy server, SIEM, etc.</li>
+    <li> Well-built investigate skills</li>
+    <li> Sharp and innovative mindset</li>
+    <li>Be able to perform well under pressure</li>
+  </ul>
+
 </div>
 
 </body>
