--- a/team profile.html
+++ b/team profile.html
@@ -30,42 +30,95 @@
         <tr>
             <td>
                 <div class="information">
-                    <p><strong>Name:</strong></p>
-                    <p><strong>Student ID:</strong></p>
-                    <p><strong>Nationality:</strong></p>
-                    <p><strong>Education:</strong></p>
-                    <p><strong>Leisure Activities:</strong></p>
-                    <p><strong>IT Interest:</strong></p>
+                    <p><strong>Name:</strong> Hoang Nguyen Nhat Minh</p>
+                    <p><strong>Student ID:</strong> s3977856</p>
+                    <p><strong>Nationality:</strong> Vietnamese</p>
+                    <p>
+                        <strong>Education:</strong>
+                        <ul>
+                            <li>Went to Vietnam Australia International School</li>
+                            <li>Freshman in RMIT</li>
+                        </ul>
+                    </p>
+                    <p>
+                        <strong>Leisure Activities:</strong>
+                        <ul>
+                            <li>Reading novels</li>
+                            <li>Playing chess</li>
+                            <li>Learning new things about technology</li>
+                            <li>Taking picture of cats</li>
+                        </ul>
+                    </p>
+                    <p><strong>IT Interest:</strong> Artificial Intelligence</p>
                 </div>
             </td>
             <td>
                 <div class="information">
-                    <p><strong>Name:</strong></p>
-                    <p><strong>Student ID:</strong></p>
-                    <p><strong>Nationality:</strong></p>
-                    <p><strong>Education:</strong></p>
-                    <p><strong>Leisure Activities:</strong></p>
-                    <p><strong>IT Interest:</strong></p>
+                    <p><strong>Name:</strong> Nguyen Duc Trong</p>
+                    <p><strong>Student ID:</strong> s3976369</p>
+                    <p><strong>Nationality:</strong> Vietnamese</p>
+                    <p>
+                        <strong>Education:</strong>
+                        <ul>
+                            <li>Spent 6 years in public school</li>
+                            <li>Went to Vietnam Australia International School</li>
+                            <li>First-year at RMIT</li>
+                        </ul>
+                    </p>
+                    <p>
+                        <strong>Leisure Activities:</strong>
+                        <ul>
+                            <li>Taking photograph of scenery</li>
+                            <li>Watching videos about self-improvement and tech-news</li>
+                            <li>Hang out with friends and relative</li>
+                            <li>Playing several types of sport</li>
+                        </ul>
+                    </p>
+                    <p><strong>IT Interest:</strong> Mobile and Web development</p>
                 </div>
             </td>
             <td>
                 <div class="information">
-                    <p><strong>Name:</strong></p>
-                    <p><strong>Student ID:</strong></p>
-                    <p><strong>Nationality:</strong></p>
-                    <p><strong>Education:</strong></p>
-                    <p><strong>Leisure Activities:</strong></p>
-                    <p><strong>IT Interest:</strong></p>
+                    <p><strong>Name:</strong> Nguyen Ha Minh Chau</p>
+                    <p><strong>Student ID:</strong> s3979405</p>
+                    <p><strong>Nationality:</strong> Vietnamese</p>
+                    <p>
+                        <strong>Education:</strong>
+                        <ul>
+                            <li>Tri Duc Highschool</li>
+                        </ul>
+                    </p>
+                    <p>
+                        <strong>Leisure Activities:</strong>
+                        <ul>
+                            <li>Listening to music</li>
+                            <li>Playing sports</li>
+                            <li>Enjoy nature scenery</li>
+                        </ul>
+                    </p>
+                    <p><strong>IT Interest:</strong> Artificial Intelligence </p>
                 </div>
             </td>
             <td>
                 <div class="information">
-                    <p><strong>Name:</strong></p>
-                    <p><strong>Student ID:</strong></p>
-                    <p><strong>Nationality:</strong></p>
-                    <p><strong>Education:</strong></p>
-                    <p><strong>Leisure Activities:</strong></p>
-                    <p><strong>IT Interest:</strong></p>
+                    <p><strong>Name:</strong> Nguyen Hoang Minh</p>
+                    <p><strong>Student ID:</strong> s3977773</p>
+                    <p><strong>Nationality:</strong> Vietnamese</p>
+                    <p>
+                        <strong>Education:</strong>
+                        <ul>
+                            <li>Wellspring Internationl School</li>
+                        </ul>
+                    </p>
+                    <p>
+                        <strong>Leisure Activities:</strong>
+                        <ul>
+                            <li>Playing guitar</li>
+                            <li>Playing multiplayer games with friends</li>
+                            <li>Watching movies</li>
+                        </ul>
+                    </p>
+                    <p><strong>IT Interest:</strong> Game development</p>
                 </div>
             </td>
         </tr>
