--- a/skill and job.html
+++ b/skill and job.html
@@ -9,7 +9,7 @@
 <body>
 
 <div class="sidenav">
-  <a href="#"> Home </a>
+  <a href="index.html"> Home </a>
   <a href="#"> Previous </a>
   <a href="#"> Next </a>
 </div>
