--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </li>
                     <li><a href="skill and job.html">Skills and Jobs</a></li>
                     <li><a href="">Project Outcomes</a></li>
-                    <li><a href="">Reflection</a></li>
+                    <li><a href="reflection.html">Reflection</a></li>
                 </div>
                 <div class="search-button">
                     <i class="fa-solid fa-magnifying-glass"></i>
