--- a/project_description.html
+++ b/project_description.html
@@ -54,12 +54,64 @@
     <tbody>
       <tr>
         <td class="tg-0lax">Canvas</td>
-        <td class="tg-0lax">Instructure, Inc. An educational technology company based in Salt Lake City, Utah, United States - founded in 2008 by two graduate students from Brigham Young University, Brian Whitmer and Devlin Daley (Instructure, 2018).</td>
-        <td class="tg-0lax">1. High-user database2. Long-term experience.3. User-friendly interface.4. Always up to date.</td>
-        <td class="tg-0lax">1. Bugs prevent users from submitting their work.2. Error while submitting.3. Certain limits for file size when it comes to submitting assignments.</td>
+        <td class="tg-0lax">Instructure, Inc. An educational technology company based in Salt Lake City, Utah, 
+            United States - founded in 2008 by two graduate students from Brigham Young University, Brian Whitmer 
+            and Devlin Daley (Instructure, 2018).
+        </td>
+        <td class="tg-0lax">
+            <li>High-user database</li>
+            <li>Long-term experience</li>
+            <li>User-friendly interface</li>
+            <li>Always up to date</li>
+        </td>
+        <td class="tg-0lax">
+            <li>Bugs prevent users from submitting their work.</li>
+            <li>Error while submitting.</li>
+            <li>Certain limits for file size when it comes to submitting assignments.</li>
+        </td>
+      </tr>
+      <tr>
+        <td class="tg-0lax">VietSchool</td>
+        <td class="tg-0lax">Founded by Bach Viet Corporation in the year 2018</td>
+        <td class="tg-0lax">User-friendly interface.</td>
+        <td class="tg-0lax">
+            <li>Takes too much time to fix errors</li>
+            <li>Cannot solve or support all the users with their problems</li>
+            <li>Too many errors, too many ads.</li>
+        </td>
       </tr>
     </tbody>
-    </table>
+    <thead>
+        <tr>
+          <th class="tg-0lax">Our Product</th>
+          <th class="tg-0lax">Founder and published date</th>
+          <th class="tg-0lax">Strengths</th>
+          <th class="tg-0lax">Weakness</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td class="tg-0lax">School Buddy</td>
+            <td class="tg-0lax">2022
+            </td>
+            <td class="tg-0lax">
+                <li>Always up-to-date technology.</li>
+                <li>More appealing.</li>
+                <li>User-friendly interface</li>
+                <li>Higher interaction between school, student, and family.</li>
+                <li>More interactive (Preview when you hoer the mouse over the link
+                    (more convenient, faster).
+                </li>
+                <li>More functions (Performance checking, goal setting, in-app timetable).</li>
+            </td>
+            <td class="tg-0lax">
+                <li>Bugs prevent users from submitting their work.</li>
+                <li>Error while submitting.</li>
+                <li>Certain limits for file size when it comes to submitting assignments.</li>
+            </td>
+          </tr>
+    </tbody>
+</table>
 </div>
 
 </body>
