Updated the next and previous functions

--- a/project_description.html
+++ b/project_description.html
@@ -10,8 +10,8 @@
 
 <div class="sidenav">
   <a href="index.html">Home</a>
-  <a href="#">Previous</a>
-  <a href="#">Next</a>
+  <a href="tools.html">Previous</a>
+  <a href="skill and job.html">Next</a>
 </div>
 
 <div class="content">
