--- a/skill and job.html
+++ b/skill and job.html
@@ -10,8 +10,8 @@
 
 <div class="sidenav">
   <a href="index.html"> Home </a>
-  <a href="#"> Previous </a>
-  <a href="#"> Next </a>
+  <a href="project_description.html"> Previous </a>
+  <a href="Project Outcome.html"> Next </a>
 </div>
 
 <div class="content">
