--- a/team profile.html
+++ b/team profile.html
@@ -11,7 +11,7 @@
 <div class="sidenav">
   <a href="index.html">Home</a>
   <a href="index.html">Previous</a>
-  <a href="#">Next</a>
+  <a href="tools.html">Next</a>
 </div>
 
 <div class="content">
