--- a/reflection.html
+++ b/reflection.html
@@ -9,9 +9,9 @@
 <body>
 
 <div class="sidenav">
-  <a href="#">Home</a>
-  <a href="#">Previous</a>
-  <a href="#">Next</a>
+  <a href="index.html">Home</a>
+  <a href="Project Outcome.html">Previous</a>
+  <a href="index.html">Next</a>
 </div>
 
 <div class="content">
