--- a/Project Outcome.html
+++ b/Project Outcome.html
@@ -10,8 +10,8 @@
 
 <div class="sidenav">
   <a href="index.html"> Home </a>
-  <a href="reflection.html"> Previous </a>
-  <a href="skill and job.html"> Next </a>
+  <a href="skill and job.html"> Previous </a>
+  <a href="reflection.html"> Next </a>
 </div>
 
 <div class="content">
