Roles table uploaded

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                             <i class="fa-solid fa-caret-down"></i>
                         </a>
                         <ul class="subnav">
-                            <li><a href="">Overview</a></li>
-                            <li><a href="">Detailed description</a></li>
+                            <li><a href="project_description.html#Overview">Overview</a></li>
+                            <li><a href="project_description.html#Detailed_Description">Detailed description</a></li>
                         </ul>
                     </li>
                     <li><a href="skill and job.html">Skills and Jobs</a></li>
