--- a/project_description.html
+++ b/project_description.html
@@ -16,7 +16,7 @@
 
 <div class="content">
   <h1>Project Description</h1>
-  <h2>1. Overview</h2>
+  <h2 id="Overview">1. Overview</h2>
   <h3>Topic:</h3>
   <p>
     Acknowledging the rising demand for education and the flaws in our education system nowadays with the need
@@ -112,7 +112,7 @@
           </tr>
     </tbody>
 </table>
-<h2>2. Detailed Description</h2>
+<h2 id="Detailed_Description">2. Detailed Description</h2>
 <h3>Aims:</h3>
 <p>
     The purpose of this project is to create a mainstream student learning and managing system which is as 
@@ -244,8 +244,31 @@
 <p>So, with effectiveness, user-friendliness, and information security as our top values for the product, we hope that in the future 
     we can make learning management easier for both students and teachers, which will improve the quality of education.
 </p>
-</div>
 
+<h3>
+    Roles:
+</h3>
+<table>
+    <thead>
+      <tr>
+        <th>Roles</th>
+        <th>Technical Lead(N. Minh)</th>
+        <th>User Interface Designer(Trong)</th>
+        <th>Back – end Developer(H. Minh)</th>
+        <th>Cybersecurity(Chau)</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Description</td>
+        <td>Taking the technical lead role in this project, Minh is tasked with planning and checking the group's progress. Specifically, he needs to coordinate with group members to construct the project plan, which includes the milestones for each phase and a working timeline with precise detail. Also, Minh oversees determining the group's pace and adjusting the team result accordingly to match the expectations. Moreover, he is responsible for evaluating the outcome and combining parts of the product.</td>
+        <td>My mission in this project is to create a clear, energetic interface which is easy to access all the units. To accomplish this, the developer requires not only skills but also being predictable in designing a website interface. For example, I must predict all the possibilities when a new user visits the page. So that I can perceive where to put the essential functions that are easily navigable. Moreover, since this is an educational application, the font and color must be engaging and go well together to create the best experience for our users. Beside the conveniences, I also have to ensure that the Frontend section can operate effectively with the Backend sections so the website can run effectively. Doing this job exceptionally would require me to have solid experience in CSS, JavaScript with assistance like React and CSS library.</td>
+        <td>As the project’s back-end developer, Minh will decide how to best design the web application framework. This includes writing clean code that is readable for other members to be able to read and implement front-end features smoothly and working with SQL and Python to create a system that handles the inputs from users using a database. However, something that Minh can’t ignore is how to make the system as efficient as possible to make the process from request to action seamless.</td>
+        <td>More and more information is being exposed on the internet every day due to weak security. Having your information exposed on the internet is no joke, it could result in many serious problems which could lead to money lost, fraud. That’s why cybersecurity plays an important role in almost everything online nowadays. The person working in the cybersecurity field means that they will mainly be responsible for protecting the data, preventing the application from many forms of cyberattacks, and unauthorized access, solve security leaks as soon as one is detected. For this project, the role of cybersecurity will be carried out by Chau, making sure no leakage of data would occur, maintain the security of the application. To do so, she is required to have some knowledge of how a network operates, and how the application communicates, some basic knowledge in C, JavaScript, Python is a must. Her job is to troubleshoot the application, detect malicious code and whenever there’s a problem identified, establish a theory of probable cause, test the theory to determine the cause and lastly implement, come up with solutions.</td>
+      </tr>
+    </tbody>
+    </table>
+</div>
 </body>
 </html>
 
