Internal cell table commit

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="nav">
                     <li><a href="#">Home</a></li>
                     <li><a href="team profile.html">Team profile</a></li>
-                    <li><a href="">Tools</a></li>
+                    <li><a href="tools.html">Tools</a></li>
                     <li class="drop-down">
                         <a href="project_description.html">
                             Project description
