commit group photo and personality photos

--- a/team profile.html
+++ b/team profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>CSS Template</title>
+<title>Team Profile</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="assets\pages.css">
@@ -129,7 +129,7 @@
     <div class="personal-test" style="margin-top: auto;">
         <div class="name">Hoang Nguyen Nhat Minh:</div>
         <div class="photo">
-            <img src="" alt="personality test result">
+            <img src="assets\img\nminh.jpg" alt="personality test result">
         </div>
         <div class="personality">
             <p><strong>Personality:</strong></p>
@@ -148,7 +148,7 @@
     <div class="personal-test">
         <div class="name">Nguyen Duc Trong:</div>
         <div class="photo">
-            <img src="" alt="personality test result">
+            <img src="assets\img\trong.jpg" alt="personality test result">
         </div>
         <div class="personality">
             <p><strong>Personality:</strong></p>
@@ -166,7 +166,7 @@
     <div class="personal-test">
         <div class="name">Nguyen Ha Minh Chau</div>
         <div class="photo">
-            <img src="" alt="personality test result">
+            <img src="assets\img\chau.jpg" alt="personality test result">
         </div>
         <div class="personality">
             <p><strong>Personality:</strong></p>
@@ -184,7 +184,7 @@
     <div class="personal-test">
         <div class="name">Nguyen Hoang Minh</div>
         <div class="photo">
-            <img src="" alt="personality test result">
+            <img src="assets\img\hminh.jpg" alt="personality test result">
         </div>
         <div class="personality">
             <p><strong>Personality:</strong></p>
