--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         </ul>
                     </li>
                     <li><a href="skill and job.html">Skills and Jobs</a></li>
-                    <li><a href="">Project Outcomes</a></li>
+                    <li><a href="Project Outcome.html">Project Outcomes</a></li>
                     <li><a href="reflection.html">Reflection</a></li>
                 </div>
                 <div class="search-button">
