--- a/tools.html
+++ b/tools.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-<title>CSS Template</title>
+<title>Tools</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="assets\pages.css">
