Update list indent

--- a/Project Outcome.html
+++ b/Project Outcome.html
@@ -31,11 +31,11 @@
 
   <h4> Differences:</h4>
   <ul>
-    <li> Teacher </li>
+    <p> Teachers: </p>
     <ul>
         <li> Marking: Teachers/Instructors can mark papers directly from this section and give feedback directly using this function. They can also highlight the parts where students did poorly and give advice for them to improve.</li>
     </ul>
-    <li> Students </li>
+    <p> Students: </p>
     <ul>
         <li> Tracking: The students can keep track of how they did at school, see their score, and a chart that displays which areas they excel in and which areas they need to improve in. It also keeps track of grades and updates the students on the minimum grade for the next assignment/test for them to reach their goal.</li>
         <li> Group Finding: For subjects that require working in groups, students can use this function to find a suitable group based on their preferences. These preferences such as major, courses, course timetables can be set by the user and shown to everyone else.</li>
