Added the timetable to Project Description

--- a/project_description.html
+++ b/project_description.html
@@ -401,7 +401,7 @@
         <h4>
             <li>The timetable</li>
         </h4>
-        
+        <img src="assets\img\Timetable.png" alt="Complete timetable from week 1 to 11">
         <h3>Testing</h3>
         <div>
             <figure>
@@ -526,6 +526,37 @@
                     effectively, everyone must also agree on a set location for the conversation. Without these prerequisites, a task could go unfinished due to the improper use of communication 
                     platforms, or a response to a question could be delayed and impede the project's development. To address this issue, our group decided on a set online meeting starting at 
                     7:30 PM on Mondays and Thursdays and an offline meeting on Wednesdays. Without exception, every file and job delegation will be documented on our shared drive.
+                </p>
+            </li>
+            <li>
+                <p>Lack of dedication</p>
+                <p>
+                    Students have occasionally abandoned projects midway through, and every group has had to take precautions against this risk for a long time. The quality of the tasks assigned 
+                    to a student will undoubtedly suffer if they decide not to commit to the project, or worse, they will not even turn in the work. When this happens, the project will be hindered, 
+                    and numerous changes to the plan will need to be made. Either the team will need to persuade the student to complete their task, or they will need to deal with the fact that the 
+                    member will disregard that task. Dealing with the lack of commitment will always take time and effort, regardless of the outcome. To address this issue, our group's initial 
+                    meeting is devoted to learning about each other's course objectives and assigning tasks accordingly. Additionally, because everyone will have agreed on the issue, they will 
+                    constantly be inspired to participate in the project.
+                </p>
+            </li>
+            <li>
+                <p>Lack of engagement</p>
+                <p>
+                    A project can be completed only when the tasks are appropriately assigned to the various team members. Nevertheless, there are cases of group members choosing not to cooperate. 
+                    It is either brought on by the oddness of new friends or resistance to social interaction. Whatever the motivation, refusing to cooperate is never beneficial. The tasks cannot 
+                    be completed if teammates do not work together because disagreements may occur during data investigation, design mismatches during presentations, or disputes during the evaluation 
+                    of proposals. In the worst circumstances, the issues might not be resolved because of each member's ego and resistance, leading to a proposal and presentation that lacks consistency 
+                    and accuracy. In week three, we had a bonding activity where we played table tennis together to solve this problem. We have also chosen a group leader who will unite all the ideas 
+                    into a cohesive concept.
+                </p>
+            </li>
+            <li>
+                <p>Lack of customers' attraction</p>
+                <p>
+                    The field of educational management applications is popular nowadays, and hence, our product has many competitors. These are big organizations with a history in the education segment, 
+                    namely Canvas, Outlook, and VietSchool. To compete with those major organizations, having a refreshing user interface and optimized features is still insufficient. The project will not 
+                    survive in the industry without occasional updates and significant benefits to attract consumers, as the competitors have already constructed a substantial customer royalty. To address 
+                    this issue, in addition to the revolutionary changes in the current school management system, our application also needs to adapt to customers’ preferences and improve itself constantly.
                 </p>
             </li>
         </ol>
