--- a/tools.html
+++ b/tools.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="assets\pages.css">
+<link rel="icon" href="assets\img\images.png">
 </head>
 <body>
 
