--- a/project_description.html
+++ b/project_description.html
@@ -270,7 +270,7 @@
 
                 <tbody>
                     <tr>
-                        <td>Description</td>
+                      <td><strong>Description</strong></td>
                         <td>Taking the technical lead role in this project, Minh is tasked with planning and checking the group's progress. Specifically, 
                             he needs to coordinate with group members to construct the project plan, which includes the milestones for each phase and a 
                             working timeline with precise detail. Also, Minh oversees determining the group's pace and adjusting the team result accordingly 
